# translate-api

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start_api.sh  start_worker.sh
src/: celery_app.py
src/api/: exceptions.py  helpers.py  main.py  tasks.py
