[tool.poetry]
name = "translate-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
celery = { extras = ["redis"], version = "^5.4.0" }
fastapi = "^0.111.0"
torch = "^2.3.1"
transformers = "^4.41.2"
accelerate = "^0.31.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.9"
ipython = "^8.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
